fixed alignment issue with about text

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a {
   background-color: var(--medium);
   color: var(--light-grey);
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .portrait {
